web app names shorted with ellipses; tooltip added

--- a/hs_tools_resource/static/css/toolresource.css
+++ b/hs_tools_resource/static/css/toolresource.css
@@ -1,4 +1,6 @@
 #web-app-item {
+    width: 225px;
+    height: 150px;
     display:inline-block;
     box-sizing: border-box;
     padding-left: 1vw;
