Moved deactivate account option

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2251,9 +2251,10 @@ button.loading {
     margin-bottom: 10px;
 }
 
-#btn-edit-profile, #btn-delete-profile {
-    cursor: pointer;
+#btn-delete-profile {
+
 }
+
 .round-image {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
