--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2839,10 +2839,21 @@
                             if (json_response.hasOwnProperty('metadata_status')) {
                                 if (json_response.metadata_status !== $('#metadata-status').text()) {
                                     $('#metadata-status').text(json_response.metadata_status);
-                                    if (json_response.metadata_status == "Sufficient to make public") {
-                                        customAlert("<i class='glyphicon glyphicon-flag custom-alert-icon'></i><strong>Metadata Status:</strong> sufficient to make public", 3000);
+                                    if (json_response.metadata_status == "Sufficient to make public or discoverable") {
+                                        customAlert("<i class='glyphicon glyphicon-flag custom-alert-icon'></i><strong>Metadata Status:</strong> sufficient to make public or discoverable", 3000);
                                         $("#btn-public").prop("disabled", false);
                                         $("#btn-discoverable").prop("disabled", false);
+                                    }
+                                    else if (json_response.metadata_status == "Sufficient to make discoverable")
+                                    {
+                                        customAlert("<i class='glyphicon glyphicon-flag custom-alert-icon'></i><strong>Metadata Status:</strong> sufficient to make discoverable", 3000);
+                                        $("#btn-public").prop("disabled", true);
+                                        $("#btn-discoverable").prop("disabled", false);
+                                    }
+                                    else
+                                    {
+                                        $("#btn-public").prop("disabled", true);
+                                        $("#btn-discoverable").prop("disabled", true);
                                     }
                                 }
                             }
