Minor layout fix

--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -14,7 +14,7 @@
                 {#        Profile picture       #}
                 <div class="row">
                     {% if profile_user.id == user.id %}
-                        <div class="col-xs-12 col-sm-12 height-fix">
+                        <div class="col-xs-12 col-sm-3 height-fix pull-right">
                             <span data-page-mode="view" id="btn-edit-profile" class="glyphicon glyphicon-pencil pull-right icon-button btn-edit" title="Edit profile"></span>
 
                             <span data-page-mode="edit" id="btn-save-profile" class="btn btn-primary"
